--- a/Hamburger-Lesson/css/style.css
+++ b/Hamburger-Lesson/css/style.css
@@ -54,6 +54,7 @@ h1 {
   bottom: 0;
 }
 .menu-trigger.active span:nth-child(1) {
+  -webkit-transform: translateY(20px) rotate(-45deg);
   transform: translateY(20px) rotate(-45deg);
   background-color: #fff;
 }
